2003-10-24  Brian Warner  <warner@lothar.com>

	* twisted/internet/base.py (ReactorBase.callLater): prefix
	"internal" parameter names with an underscore, to avoid colliding
	with named parameters in the user's callback invocation. Closes
	issue347.
	(ReactorBase.addSystemEventTrigger)
	(ReactorBase.callWhenRunning)
	(ReactorBase.callInThread): same
	* doc/howto/coding-standard.xhtml (Callback Arguments): explain why

2003-10-22  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.1.0rc2.

2003-10-21  Andrew Bennetts  <spiv@twistedmatrix.com>

	* twisted/lore/tree.py, twisted/lore/lint.py,
	doc/howto/stylesheet.css: add a plain 'listing' class, for file
	listings that aren't python source or HTML.  This has slightly changed
	the classes in the generated HTML, so custom stylesheets may need
	updating.

2003-10-19  Brian Warner  <warner@lothar.com>

	* twisted/trial/reporter.py (TextReporter._formatError): use the
	right exception formatter. Closes issue339.
	* twisted/trial/util.py (emacs_format_exception): split emacs
	formatting from regular formatting, so the "hide trial innards"
	code actually gets a chance to run. Thanks to Moshe for the patch!

2003-10-16  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.1.0alpha3.

2003-10-16  Brian Warner  <warner@lothar.com>

	* doc/howto/pb-cred.xhtml: update for newcred. Closes issue172.

2003-10-15  Brian Warner  <warner@lothar.com>

	* twisted/internet/base.py: add optional debug code, enabled with
	base.DelayedCall.debug=True . If active, the call stack which
	invoked reactor.callLater will be recorded in each DelayedCall. If
	an exception happens when the timer function is run, the creator
	stack will be logged in addition to the usual log.deferr().

	* twisted/internet/defer.py: add some optional debug code, enabled
	with defer.Deferred.debug=True . If active, it will record a stack
	trace when the Deferred is created, and another when it is first